minor changes in guestbook and Letsconnect
